--- a/client/client/index.html
+++ b/client/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/3efb5b8a36.js" crossorigin="anonymous"></script>
     <title>wip</title>
   </head>
   <body>
